# earth-rover-mini

./: .gitignore  .gitmodules  README.md
3DPrint/: back_cover.stp  body.stp  camera.stp  front_top.stp  v6-mini+.stp
Hardware/: README.md
PCB/: README.md
Software/: README.md
Software/Linux/: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
Software/Linux/src/: hello.cpp  move.cpp
Software/Linux/src/Examples/: bridge.c  camera.py  move.cpp  move.py  move_and_info.py  read_output.py
Software/STM32/: .config  .cproject  .project  rtconfig.h
Software/STM32/applications/: Hardware_i2c.c  Hardware_i2c.h  INA226.c  INA226.h  MPU6050.c  MPU6050.h  QMC5883L.c  QMC5883L.h  QMC5883P.c  QMC5883P.h  hwtimer.c  imu.c  imu.h  main.c  main.h  motor.c  motor_test.c  ota.c  pid.c  pid.h  pid_uart.c  pwm_ic.h  state.c  state.h  strategy.c  uart.c  uart_dma.c  uart_mutex.c  ucp.h  vl53l0x.c  wdog.c
Software/STM32/applications/Algorithm/: ellipsoidfit.c  ellipsoidfit.h
Software/STM32/applications/MPU6050_DMP/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
Software/STM32/applications/WS2812/: ws2812b.c  ws2812b.h  ws2812binterface.c
Software/STM32/cubemx/: .mxproject  cubemx.ioc
Software/STM32/drivers/: board.c  board.h  drv_clk.c  drv_hwtimer.c  drv_pulse_encoder.c  drv_pwm.c  stm32f4xx_hal_conf.h
Software/STM32/drivers/include/: fal_cfg.h
Software/STM32/rt-thread/src/: kservice.c
wiki/docs/zh/: 00-文档目录.md  04-在机器上运行程序.md  05-STM32-Control.md  06-1 4G模组入网与退网.md  06-1-4G模组入网与退网.md  06-2-WIFI-模组入网.md  06-3-GPS定位获取.md  06-4-音视频数据获取.md  06-5-WebAPI.md
(+5 files in other folders)
